Add additional sections to resume

--- a/raunakbhagat_CV.yaml
+++ b/raunakbhagat_CV.yaml
@@ -1,153 +1,192 @@
-cv:
-  name: raunakbhagat
-  location: Your Location
-  email: youremail@yourdomain.com
-  phone: tel:+90-541-999-99-99
-  website: https://yourwebsite.com/
-  social_networks:
-    - network: LinkedIn
-      username: yourusername
-    - network: GitHub
-      username: yourusername
-  sections:
-    summary:
-      - This is an example resume to showcase the capabilities of the open-source
-        LaTeX CV generator, [RenderCV](https://github.com/sinaatalay/rendercv). A
-        substantial part of the content is taken from [here](https://www.careercup.com/resume),
-        where a *clean and tidy CV* pattern is proposed by **Gayle L. McDowell**.
-    education:
-      - institution: University of Pennsylvania
-        area: Computer Science
-        degree: BS
-        start_date: 2000-09
-        end_date: 2005-05
-        highlights:
-          - 'GPA: 3.9/4.0 ([Transcript](https://example.com))'
-          - '**Coursework:** Software Foundations, Computer Architecture, Algorithms,
-            Artificial Intelligence, Comparison of Learning Algorithms, Computational
-            Theory.'
-    experience:
-      - company: Apple Computer
-        position: Software Engineer, Intern
-        location: CA, USA
-        start_date: 2004-06
-        end_date: 2004-08
-        highlights:
-          - Reduced time to render the user's buddy list by 75% by implementing a
-            prediction algorithm.
-          - Implemented iChat integration with OS X Spotlight Search by creating a
-            tool that extracts metadata from saved chat transcripts and provides metadata
-            to a system-wide search database.
-          - Redesigned chat file format and implemented backward compatibility for
-            search.
-      - company: Microsoft Corporation
-        position: Lead Student Ambassador
-        location: WA, USA
-        start_date: 2003-09
-        end_date: 2005-04
-        highlights:
-          - Promoted to Lead Student Ambassador in the Fall of 2004, supervised 10
-            - 15 Student Ambassadors.
-          - 'Created and taught a computer science course, CSE 099: Software Design
-            and Development.'
-      - company: University of Pennsylvania
-        position: Head Teaching Assistant
-        location: PA, USA
-        start_date: 2001-10
-        end_date: 2005-05
-        highlights:
-          - Implemented a user interface for the VS open file switcher (ctrl-tab)
-            and extended it to tool windows.
-          - Created a service to provide gradient across VS and VS add-ins. Optimized
-            service via caching.
-          - Programmer Productivity Research Center (Summers 2001, 2002)
-          - 'Built app to compute the similarity of all methods in a code base, reduced
-            time from $\mathcal{O}(n^2)$ to $\mathcal{O}(n \log n)$. '
-          - Created a test case generation tool that creates random XML docs from
-            XML Schema.
-      - company: Microsoft Corporation
-        position: Software Design Engineer, Intern
-        location: WA, USA
-        start_date: 2003-06
-        end_date: 2003-08
-        highlights:
-          - Promoted to Lead Student Ambassador in the Fall of 2004, supervised 10
-            - 15 Student Ambassadors.
-    publications:
-      - title: Magneto-Thermal Thin Shell Approximation for 3D Finite Element Analysis
-          of No-Insulation Coils
-        authors:
-          - Albert Smith
-          - raunakbhagat
-          - Jane Derry
-          - Harry Tom
-          - Frodo Baggins
-        doi: 10.1109/TASC.2023.3340648
-        date: 2004-01
-    projects:
-      - name: Multi-User Drawing Tool
-        date: '2004'
-        highlights:
-          - Developed an electronic classroom where multiple users can view and simultaneously
-            draw on a "chalkboard" with each person's edits synchronized.
-          - Used C++ and MFC.
-      - name: Synchronized Calendar
-        start_date: 2003
-        end_date: 2004
-        highlights:
-          - Developed a desktop calendar with globally shared and synchronized calendars,
-            allowing users to schedule meetings with other users.
-          - Used C#.NET, SQL, and XML.
-      - name: Operating System
-        date: '2002'
-        highlights:
-          - Developed a UNIX-style OS with a scheduler, file system, text editor,
-            and calculator.
-          - Used C.
-    additional_experience_and_awards:
-      - label: Instructor (2003 - 2005)
-        details: Taught two full-credit Computer Science courses.
-      - label: Third Prize, Senior Design Projects
-        details: Awarded 3rd prize for a synchronized calendar project out of 100
-          projects.
-    technologies:
-      - label: Languages
-        details: C++, C, Java, Objective-C, C#.NET, SQL, JavaScript
-      - label: Software
-        details: Visual Studio, Microsoft SQL Server, Eclipse, XCode, Interface Builder
 design:
-  theme: classic
-  font_size: 10pt
-  page_size: letterpaper
-  color: '#004f90'
+  theme: "classic"
+  font_size: "10pt"
+  page_size: "letterpaper"
+  color: "#004f90"
   disable_external_link_icons: false
   disable_page_numbering: false
-  page_numbering_style: NAME - Page PAGE_NUMBER of TOTAL_PAGES
-  disable_last_updated_date: false
-  last_updated_date_style: Last updated in TODAY
-  header_font_size: 30 pt
-  text_alignment: justified
+  page_numbering_style: "PAGE_NUMBER"
+  disable_last_updated_date: true
+  header_font_size: "20pt"
+  text_alignment: "justified"
   margins:
     page:
-      top: 2 cm
-      bottom: 2 cm
-      left: 2 cm
-      right: 2 cm
+      top: "2cm"
+      bottom: "2cm"
+      left: "2cm"
+      right: "2cm"
     section_title:
-      top: 0.3 cm
-      bottom: 0.2 cm
+      top: "0.5cm"
+      bottom: "0.2cm"
     entry_area:
-      left_and_right: 0.2 cm
-      vertical_between: 0.2 cm
-      date_and_location_width: 4.5 cm
-      education_degree_width: 1 cm
+      left_and_right: "0.2cm"
+      vertical_between: "0.2cm"
+      date_and_location_width: "4.5cm"
+      education_degree_width: "1cm"
     highlights_area:
-      top: 0.10 cm
-      left: 0.4 cm
-      vertical_between_bullet_points: 0.10 cm
+      top: "0.10cm"
+      left: "0.4cm"
+      vertical_between_bullet_points: "0.10cm"
     header:
-      vertical_between_name_and_connections: 0.3 cm
-      bottom: 0.3 cm
-      horizontal_between_connections: 0.5 cm
-  show_timespan_in:
-    - Experience
+      vertical_between_name_and_connections: "0cm"
+      bottom: "0.4cm"
+      horizontal_between_connections: "0.2cm"
+
+cv:
+  name: "Raunak Bhagat"
+  location: "Palo Alto, CA"
+  email: "rabhagat31@gmail.com"
+  website: "https://raunakab.github.io"
+  social_networks:
+    - network: "LinkedIn"
+      username: "raunakbhagat"
+    - network: "GitHub"
+      username: "raunakab"
+
+  sections:
+    # summary:
+    #   - This is an example resume to showcase the capabilities of the open-source
+    #     LaTeX CV generator, [RenderCV](https://github.com/sinaatalay/rendercv). A
+    #     substantial part of the content is taken from [here](https://www.careercup.com/resume),
+    #     where a *clean and tidy CV* pattern is proposed by **Gayle L. McDowell**.
+
+    Work Experience:
+      - company: "[Tesla Motors](https://www.tesla.com)"
+        position: "Software Engineer - (Vehicle Simulations)"
+        location: "Palo Alto, CA"
+        start_date: 2023-01
+        end_date: 2024-04
+        # highlights:
+        #   - Reduced time to render the user's buddy list by 75% by implementing a
+        #     prediction algorithm.
+        #   - Implemented iChat integration with OS X Spotlight Search by creating a
+        #     tool that extracts metadata from saved chat transcripts and provides metadata
+        #     to a system-wide search database.
+        #   - Redesigned chat file format and implemented backward compatibility for
+        #     search.
+    Internships:
+      - company: "[Hygge Energy](https://www.hygge.energy)"
+        position: "Full Stack Software Engineer, Intern"
+        location: "Toronto, ON"
+        start_date: 2021-09
+        end_date: 2021-12
+      - company: "[OnTraccr](https://www.ontraccr.com)"
+        position: "Full Stack Software Engineer, Intern"
+        location: "Vancouver, BC"
+        start_date: 2021-05
+        end_date: 2021-08
+      - company: "[Samsung Electronics](https://www.samsung.com/ca/business/mobile-solutions/samsung-knox)"
+        position: "Technical Support Engineer, Intern - (Samsung Knox)"
+        location: "Vancouver, BC"
+        start_date: 2019-09
+        end_date: 2020-04
+
+    Personal Ventures:
+      - company: "[UBC Bionics (Student Design Team)](https://ubcbionics.com)"
+        position: "Lead Software Engineer - (Embedded Systems)"
+        location: "Vancouver, BC"
+        start_date: 2019-02
+        end_date: 2023-05
+      - company: "Wavy App"
+        position: "Co-Founder, Full Stack Software Engineer"
+        location: "Vancouver, BC"
+        start_date: 2021-06
+        end_date: 2022-07
+
+    #   - company: Microsoft Corporation
+    #     position: Lead Student Ambassador
+    #     location: WA, USA
+    #     start_date: 2003-09
+    #     end_date: 2005-04
+    #     highlights:
+    #       - Promoted to Lead Student Ambassador in the Fall of 2004, supervised 10
+    #         - 15 Student Ambassadors.
+    #       - 'Created and taught a computer science course, CSE 099: Software Design
+    #         and Development.'
+    #   - company: University of Pennsylvania
+    #     position: Head Teaching Assistant
+    #     location: PA, USA
+    #     start_date: 2001-10
+    #     end_date: 2005-05
+    #     highlights:
+    #       - Implemented a user interface for the VS open file switcher (ctrl-tab)
+    #         and extended it to tool windows.
+    #       - Created a service to provide gradient across VS and VS add-ins. Optimized
+    #         service via caching.
+    #       - Programmer Productivity Research Center (Summers 2001, 2002)
+    #       - 'Built app to compute the similarity of all methods in a code base, reduced
+    #         time from $\mathcal{O}(n^2)$ to $\mathcal{O}(n \log n)$. '
+    #       - Created a test case generation tool that creates random XML docs from
+    #         XML Schema.
+    #   - company: Microsoft Corporation
+    #     position: Software Design Engineer, Intern
+    #     location: WA, USA
+    #     start_date: 2003-06
+    #     end_date: 2003-08
+    #     highlights:
+    #       - Promoted to Lead Student Ambassador in the Fall of 2004, supervised 10
+    #         - 15 Student Ambassadors.
+
+    education:
+      - institution: "University of British Columbia, Vancouver"
+        degree: "B.Sc."
+        area: "Computer Science & Mathematics"
+        start_date: 2017-09
+        end_date: 2023-04
+        highlights:
+          - "GPA: 80%"
+          - "CS courses: Data Structures + Algorithms (Introductory, Intermediary, Advanced), Operating Systems, Computer Networking, Computer Graphics, Numerical Optimization, Compiler Construction"
+          - "Math courses: Calculus I - IV, Linear Algebra, Differential Equation (Ordinary + Partial), Probability"
+
+    # publications:
+    #   - title: Magneto-Thermal Thin Shell Approximation for 3D Finite Element Analysis
+    #       of No-Insulation Coils
+    #     authors:
+    #       - Albert Smith
+    #       - raunakbhagat
+    #       - Jane Derry
+    #       - Harry Tom
+    #       - Frodo Baggins
+    #     doi: 10.1109/TASC.2023.3340648
+    #     date: 2004-01
+
+    # projects:
+    #   - name: "Wavy App"
+    #     start_date: 2021-06
+    #     end_date: 2022-07
+    #     highlights:
+    #       - Developed an electronic classroom where multiple users can view and simultaneously
+    #         draw on a "chalkboard" with each person's edits synchronized.
+    #       - Used C++ and MFC.
+    #   - name: Synchronized Calendar
+    #     start_date: 2003
+    #     end_date: 2004
+    #     highlights:
+    #       - Developed a desktop calendar with globally shared and synchronized calendars,
+    #         allowing users to schedule meetings with other users.
+    #       - Used C#.NET, SQL, and XML.
+    #   - name: Operating System
+    #     date: '2002'
+    #     highlights:
+    #       - Developed a UNIX-style OS with a scheduler, file system, text editor,
+    #         and calculator.
+    #       - Used C.
+
+    # additional_experience_and_awards:
+    #   - label: Instructor (2003 - 2005)
+    #     details: Taught two full-credit Computer Science courses.
+    #   - label: Third Prize, Senior Design Projects
+    #     details: Awarded 3rd prize for a synchronized calendar project out of 100
+    #       projects.
+
+    technologies:
+      - label: "Languages"
+        details: "C, Rust, Python, Javascript, Typescript, HTML, CSS, LaTeX"
+      - label: "Build Systems"
+        details: "Buck2, SCons, Cargo, NPM, Yarn"
+      - label: "Frontend Libraries"
+        details: "React, React Native"
+      - label: "Backend Libraries"
+        details: "Hyper.rs, ExpressJS"
+      - label: "Tools"
+        details: "Git, Unix-like Systems (e.g., macOS, Linux)"
